examples/bad_condition.june
// error: assignment found in expression

let x = 0

if x = 1 {
    println("true")
} else {
    println("false")
}